clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr31136.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/pr31136.c" (c, x86_64-unknown-linux-gnu)
global s : rec_S = Zero { ty: Named("rec_S") } [external, default, align 4, dso_local]

fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        %2 = const 31 : u32i
        %3 = get_global @s : rec_S*
        get_member
        set_bitfield
        %6 = get_global @s : rec_S*
        get_member
        get_bitfield
        %9 = get_global @s : rec_S*
        get_member
        set_bitfield
        %12 = get_global @s : rec_S*
        get_member
        get_bitfield
        %15 = get_global @s : rec_S*
        get_member
        set_bitfield
        scope {
                %20 = get_global @s : rec_S*
                get_member
                get_bitfield
                %23 = cast(integral) %22 : s32i
                %24 = const 15 : s32i
                cmp
                if %25 {
                        %26 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %18 = const 0 : s32i
        store %18, %0
        %19 = load %0 : s32i
        return %19
}
