clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr31169.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/pr31169.c" (c, x86_64-unknown-linux-gnu)
fn sign_bit_p(%arg0: rec_tree_type*, %arg1: s64i, %arg2: u64i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: rec_tree_type*, %arg1: s64i, %arg2: u64i):
        %14 = alloca rec_tree_type*, "t", align 8
        %15 = alloca s64i, "val_hi", align 8
        %16 = alloca u64i, "val_lo", align 8
        %17 = alloca s32i, "__retval", align 4
        %18 = alloca u64i, "mask_lo", align 8
        %19 = alloca u64i, "lo", align 8
        %20 = alloca s64i, "mask_hi", align 8
        %21 = alloca s64i, "hi", align 8
        %22 = alloca s32i, "width", align 4
        store %arg0, %14
        store %arg1, %15
        store %arg2, %16
        %23 = load %14 : rec_tree_type*, align 8
        get_member
        get_bitfield
        %26 = cast(integral) %25 : s32i
        store %26, %22, align 4
        scope {
                %43 = load %22 : s32i, align 4
                %44 = cast(integral) %43 : u64i
                %45 = const 8 : u64i
                %46 = const 8 : u64i
                mul
                cmp
                if %48 {
                        %64 = const 1 : u64i
                        %65 = load %22 : s32i, align 4
                        %66 = cast(integral) %65 : u64i
                        %67 = const 8 : u64i
                        %68 = const 8 : u64i
                        mul
                        sub
                        %71 = const 1 : u64i
                        sub
                        shift
                        %74 = cast(integral) %73 : s64i
                        store %74, %21, align 8
                        %75 = const 0 : u64i
                        store %75, %19, align 8
                        %76 = const 18446744073709551615 : u64i
                        %77 = const 2 : u64i
                        %78 = const 8 : u64i
                        %79 = const 8 : u64i
                        mul
                        mul
                        %82 = load %22 : s32i, align 4
                        %83 = cast(integral) %82 : u64i
                        sub
                        shift
                        %86 = cast(integral) %85 : s64i
                        store %86, %20, align 8
                        %87 = const 18446744073709551615 : u64i
                        store %87, %18, align 8
                        yield
                } else {
                        %49 = const 0 : s64i
                        store %49, %21, align 8
                        %50 = const 1 : u64i
                        %51 = load %22 : s32i, align 4
                        %52 = const 1 : s32i
                        sub
                        shift
                        store %54, %19, align 8
                        %55 = const 0 : s64i
                        store %55, %20, align 8
                        %56 = const 18446744073709551615 : u64i
                        %57 = const 8 : u64i
                        %58 = const 8 : u64i
                        mul
                        %60 = load %22 : s32i, align 4
                        %61 = cast(integral) %60 : u64i
                        sub
                        shift
                        store %63, %18, align 8
                        yield
                }
                yield
        }
        scope {
                %29 = load %15 : s64i, align 8
                %30 = load %20 : s64i, align 8
                and
                %32 = load %21 : s64i, align 8
                cmp
                %34 = ternary %33 ? { : bool
                        %38 = load %16 : u64i, align 8
                        %39 = load %18 : u64i, align 8
                        and
                        %41 = load %19 : u64i, align 8
                        cmp
                        yield %42
                } : {
                        %37 = const false : bool
                        yield %37
                }
                if %34 {
                        %35 = const 1 : s32i
                        store %35, %17
                        %36 = load %17 : s32i
                        return %36
                }
                yield
        }
        %27 = const 0 : s32i
        store %27, %17
        %28 = load %17 : s32i
        return %28
}
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca rec_tree_type, "t", align 4
        %2 = const 0 : s32i
        store %2, %0
        %3 = const 1 : u32i
        get_member
        set_bitfield
        scope {
                %8 = const 0 : s64i
                %9 = const 18446744073709551615 : u64i
                %10 = call @sign_bit_p(%1, %8, %9) : s32i [all]
                %11 = cast(int_to_bool) %10 : bool
                not
                if %12 {
                        %13 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %6 = const 0 : s32i
        store %6, %0
        %7 = load %0 : s32i
        return %7
}
