clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr32500.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/pr32500.c" (c, x86_64-unknown-linux-gnu)
global __const.main.numbers : s32i[4] = ConstArray { ty: Array { element_type: Named("s32i"), size: 4 }, elts: Array([CirInt { ty: Named("s32i"), value: "57005" }, CirInt { ty: Named("s32i"), value: "48879" }, CirInt { ty: Named("s32i"), value: "4919" }, CirInt { ty: Named("s32i"), value: "16962" }]), trailing_zeros_num: 0 } [cir_private, default, dso_local, constant]
global x : s32i = CirInt { ty: Named("s32i"), value: "0" } [external, default, align 4, dso_local]

fn foo(%arg2: s32i) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg2: s32i):
        %34 = alloca s32i, "i", align 4
        store %arg2, %34
        %35 = load %34 : s32i, align 4
        %36 = get_global @x : s32i*
        store %35, %36, align 4
        return
}
fn exit(%arg0: s32i) -> void [external, c];
fn bar() -> void [external, c, no_inline, dso_local, nothrow] {
        %32 = get_global @exit : (s32i) -> void*
        %33 = const 0 : s32i
        call @exit(%33) [all]
        return
}
fn abort() -> void [external, c, nothrow];
fn main(%arg0: s32i, %arg1: s8i**) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i, %arg1: s8i**):
        %0 = alloca s32i, "argc", align 4
        %1 = alloca s8i**, "argv", align 8
        %2 = alloca s32i, "__retval", align 4
        %3 = alloca s32i, "i", align 4
        %4 = alloca s32i[4], "numbers", align 16
        store %arg0, %0
        store %arg1, %1
        %5 = const 0 : s32i
        store %5, %2
        %6 = get_global @__const.main.numbers : s32i[4]*
        copy
        scope {
                %9 = const 1 : s32i
                store %9, %3, align 4
                for cond {
                        %29 = load %3 : s32i, align 4
                        %30 = const 12 : s32i
                        cmp
                        condition %31
                } step {
                        %10 = load %3 : s32i, align 4
                        inc
                        store %11, %3, align 4
                        yield
                } body {
                        scope {
                                scope {
                                        %12 = load %3 : s32i, align 4
                                        %13 = const 4 : s32i
                                        cmp
                                        if %14 {
                                                %23 = load %3 : s32i, align 4
                                                %24 = const 1 : s32i
                                                sub
                                                %26 = cast(integral) %25 : s64i
                                                get_element
                                                %28 = load %27 : s32i, align 4
                                                call @foo(%28) [all]
                                                yield
                                        } else {
                                                scope {
                                                        %15 = load %3 : s32i, align 4
                                                        %16 = const 7 : s32i
                                                        cmp
                                                        %18 = ternary %17 ? { : bool
                                                                %20 = load %3 : s32i, align 4
                                                                %21 = const 9 : s32i
                                                                cmp
                                                                yield %22
                                                        } : {
                                                                %19 = const false : bool
                                                                yield %19
                                                        }
                                                        if %18 {
                                                                call @bar() [all]
                                                                yield
                                                        }
                                                        yield
                                                }
                                                yield
                                        }
                                        yield
                                }
                                yield
                        }
                        yield
                }
                yield
        }
        %7 = get_global @abort : () -> void*
        call @abort() [all]
        %8 = load %2 : s32i
        return %8
}
